Update nginxhello hr for container image version 1.19.1

--- a/helm/nginxhello-hr.yaml
+++ b/helm/nginxhello-hr.yaml
@@ -13,3 +13,8 @@ spec:
   rollback:
     enable: true
     retry: true
+  values:
+    image:
+      tag: 1.19.1
+    ingress:
+      host: 10.96.26.172
